--- a/resources/client/index.html
+++ b/resources/client/index.html
@@ -7,28 +7,18 @@
     <script src="/client/js/index.js"></script>
 </head>
 
-<body onload="pageLoad()">
+<body onload="pageload()">
 
 <div class="content">
 
     <div class="pageHeader">
         <div class="floatRight">
             <form action="login.html">
-            <button id="newButton" class="editButton">Sign in</button>
+            <button id="newButton" class="editButton" style="alignment: center">Sign in</button>
             </form>
         </div>
         <h1>Lees Restaurant Reserver</h1>
-    </div>
-
-    <div id="ListRest">
-
-                Rest1<p></p>
-               <img class=newimg src="mac.png" alt="pic" style="width:100px;height:100px;alignment: center"> <button class="fpButton">Book now!</button>
-
-
-    </div>
-
-    </div>
+        <div id = "listRest"></div>
     <div class="home">
         <h2 id="editHeading"></h2>
         <form id="LoginForm">
@@ -36,8 +26,8 @@
         </form>
     </div>
 
-
-
+    </div>
+</div>
 </body>
 
 
